src/objects/cp_PlannerLocation__c.object
<CustomObject>
    <fields>
        <fullName>Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>cp_Event__c</referenceTo>
        <relationshipLabel>Planner Locations</relationshipLabel>
        <relationshipName>Planner_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OptOutReason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planner__c</fullName>
        <label>Planner</label>
        <referenceTo>cp_Planner__c</referenceTo>
        <relationshipLabel>Planner Locations</relationshipLabel>
        <relationshipName>Planner_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Planner Location</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planner Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>